semantic cartography form improvment for section A

--- a/SemanticCartography.html
+++ b/SemanticCartography.html
@@ -511,8 +511,8 @@
 
                                         <li style="counter-reset: main 0;">Research Context
                                             <p style="text-align: left;">
-                                                It is imporant to undertand the context
-                                                and movition for Semantic Cartography.
+                                                It is important to undertand the research context
+                                                and motivation for Semantic Cartography.
                                             </p>
                                             <ol>
                                                 <li>Bridging Silos in Information System Engineering</li>
@@ -528,38 +528,53 @@
 
 
                                 <section>
-                                    <h2>A.1 Bridging Silos in Information Systems Engineering</h2>
-                                    <ul>
-                                        <li><strong>Real-world systems</strong> span human, organizational, economic,
-                                            societal & technological dimensions</li>
-                                        <li><strong>Diverse contexts:</strong> BPM, GIS, digital twins, PLM, emerging
-                                            tech like ML, blockchain, process mining, sustainability</li>
-                                        <li><strong>Rapid evolution</strong> creates specialized sub-disciplines and
-                                            research silos</li>
-                                        <li><strong>Risk:</strong> Fragmentation threatens coherent system design and
-                                            interoperability</li>
-                                        <li><strong>Critical challenge:</strong> Building <em>continuous operational
-                                                interoperability</em> in enterprises, especially for PLM</li>
-                                        <li><strong>Need:</strong> Holistic approaches that unify diverse aspects and
-                                            support ongoing adaptation</li>
-                                    </ul>
+                                    <h3 style="font-size: 0.8em;text-transform: none;">A.1 Bridging Silos in Information
+                                        Systems Engineering</h2>
+                                        <ul style="font-size: 0.4em;">
+                                            <li><strong>Real-world systems</strong> span human, organizational,
+                                                economic,
+                                                societal & technological dimensions</li>
+                                            <li><strong>Diverse contexts:</strong> BPM, GIS, digital twins, PLM,
+                                                emerging
+                                                tech like ML, blockchain, process mining, sustainability</li>
+                                            <li><strong>Rapid evolution</strong> creates specialized sub-disciplines and
+                                                research silos</li>
+                                            <li><strong>Risk:</strong> Fragmentation threatens coherent system design
+                                                and
+                                                interoperability</li>
+                                            <li><strong>Critical challenge:</strong> Building <em>continuous operational
+                                                    interoperability</em> in enterprises, especially for PLM</li>
+                                            <li><strong>Need:</strong> Holistic approaches that unify diverse aspects
+                                                and
+                                                support ongoing adaptation</li>
+                                        </ul>
                                 </section>
                                 <section>
-                                    <h2>A.2 Semantic & System Cartography: Bridging Silos Visually</h2>
-                                    <ul>
-                                        <li><strong>Maps, not silos:</strong> A layered, navigable cartography spanning
-                                            data, processes, semantics, and organizational contexts</li>
-                                        <li><strong>Inspired by GIS/GPS:</strong> Provides a living, zoomable,
-                                            context-aware representation for architects and engineers</li>
-                                        <li><strong>Bridging formal & practical:</strong> Combines ontologies, logic,
-                                            and visual notations to support pragmatic interoperability</li>
-                                        <li><strong>Supporting continuous transformation:</strong> Preserve alignment
-                                            and coherence across evolving systems and contexts</li>
-                                        <li><strong>Enabling a cohesive design:</strong> Break down silos by connecting
-                                            specialized views in a shared semantic space</li>
-                                        <li><em>Semantic cartography as a foundation for resilient, integrated
-                                                information systems engineering</em></li>
-                                    </ul>
+                                    <h3 style="font-size: 0.8em;text-transform: none;">A.2 Semantic & System
+                                        Cartography: Bridging Silos Visually</h2>
+                                        <ul style="font-size: 0.4em;">
+                                            <li><strong>Maps, not silos:</strong> A layered, navigable cartography
+                                                spanning
+                                                data, processes, semantics, and organizational contexts</li>
+                                            <li><strong>Inspired by GIS/GPS:</strong> Provides a living, zoomable,
+                                                context-aware representation for architects and engineers</li>
+                                            <li><strong>Bridging formal & practical:</strong> Combines ontologies,
+                                                logic,
+                                                and visual notations to support pragmatic interoperability</li>
+                                            <li><strong>Supporting continuous transformation:</strong> Preserve
+                                                alignment
+                                                and coherence across evolving systems and contexts</li>
+                                            <li><strong>Enabling a cohesive design:</strong> Break down silos by
+                                                connecting
+                                                specialized views in a shared semantic space</li>
+                                        </ul>
+                                        <blockquote>
+                                            <p style="font-size: 0.6em; text-align: center;"><em>“Semantic cartography
+                                                    as
+                                                    a foundation for resilient, integrated
+                                                    information systems engineering”</em></p>
+                                        </blockquote>
+
                                 </section>
                             </section>
 
@@ -582,7 +597,8 @@
 
                                             </ol>
                                             <p>In this chapter, we will discover that the nature of meaning was defined
-                                                quite longer before computing and that it is not restricted to text</p>
+                                                quite longer before computing and that it is not restricted to text but
+                                                also visual symbols in order to deal with cartographies</p>
                                             <p style="text-align: right;">Next chapter will explain<br> what knowledge,
                                                 information,
                                                 and data are. ></p>
@@ -1068,6 +1084,9 @@
                                     <p style="font-size: 0.6em; text-align: left;">
                                         All those considerations are key in order to undertand semantic cartography and
                                         how it contributes to preparing and building operational interoperability.
+                                    </p>
+                                    <p style="font-size: 0.6em; text-align: left;">
+                                        Before that let's clarify Data, Information and Knowldege.
                                     </p>
                                 </section>
                             </section>
