first and second section updated

--- a/SemanticCartography.html
+++ b/SemanticCartography.html
@@ -516,8 +516,6 @@
                                                 <li>Usual Communication Problems</li>
                                             </ol>
                                         </li>
-
-
                                     </ol>
                                 </section>
 
@@ -679,8 +677,7 @@
                                 </section>
                                 <section>
                                     <h3 style="font-size: 0.8em; text-transform: none;color: #3366cc;">1.6 Visual
-                                        Variables in
-                                        Infographics
+                                        Variables inInfographics
                                     </h3>
                                     <div class="content-zone">
                                         <div class="text-zone">
@@ -801,6 +798,31 @@
                                         </li>
                                     </ul>
                                 </section>
+                            </section>
+                            <section>
+                                <section>
+                                    <ol style="list-style-type:none; ">
+                                        <li style="counter-reset: main 1;">Semantic
+                                            Cartography
+                                            <p style="text-align: left;">
+                                                A visual approach to structuring, navigating, and reasoning over
+                                                complexity<br>
+                                                Powered by semantic models, rendered as dynamic composite graphs.
+                                            </p>
+                                            <ol>
+                                                <li>Key Challenges: Navigating, Structuring, and Engaging with Composite Graphs</li>
+                                                <li>Semantic Cartography: Principles and Implementation</li>
+                                                <li>Used tools and rendering engine</li>
+                                                <li>Visual notation: standard and extended symbols</li>
+                                                <li>Rendering engine: base choice and rationale</li>
+                                                <li>Adaptations made to support visual languages</li>
+                                                <li>Automatic layout of compound graphs</li>
+                                                <li>From semantic data to visual structures</li>
+                                            </ol>
+                                        </li>
+                                    </ol>
+                                </section>
+
                             </section>
 
 
