--- a/SemanticCartography.html
+++ b/SemanticCartography.html
@@ -1179,27 +1179,128 @@
                                     </blockquote>
 
                                 </section>
-                                <section style="text-align: left; font-size: 1.1em;">
-  <h2 style="text-align: left;">Conclusion</h2>
+                                <section>
+                                    <h3 style="font-size: 0.8em; text-transform: none;color: #3366cc;">2.6 Conclusion
+                                    </h3>
+                                    <div class="content-zone">
+                                        <div class="text-zone">
 
-  <p>We face growing complexity and a faster pace of change.</p>
-  <p>We need new tools and ways to structure knowledge.</p>
+                                            <p style="font-size: 0.5em;text-align: left;">We face growing complexity and
+                                                a faster pace of change.</p>
+                                            <p style="font-size: 0.5em;text-align: left;">We need new tools and ways to
+                                                structure knowledge.</p>
 
-  <ul>
-    <li>We introduce a new paradigm: <strong>Semantized Interactive Compound Graphs</strong></li>
-    <li>We shift from static, Gutenberg-style media to dynamic, digital views</li>
-    <li>We define a model to build semantic cartographies</li>
-    <li>We propose a method based on a dedicated visual language</li>
-  </ul>
+                                            <ul style="font-size: 0.45em;text-align: left;">
+                                                <li>For this we introduce a new paradigm: <strong>Semantized Interactive
+                                                        Compound
+                                                        Graphs</strong></li>
+                                                <li>We shift from static, Gutenberg-style media to dynamic, digital
+                                                    views</li>
+                                                <li>We define a model to build semantic cartographies</li>
+                                                <li>We propose a method based on a dedicated visual language</li>
+                                            </ul>
+                                        </div>
+                                        <div class="image-zone" style="margin-bottom: 0.2em;">
+                                            <img src="./img/semantizedcartography.png" alt="Semantized Cartography"
+                                                style="max-width: 80%; height: auto;" />
+                                        </div>
+                                    </div>
 
-  <p>Next, we present a first implementation:</p>
+                                    <p style="font-size: 0.5em;text-align: left;">Next, we present a first
+                                        implementation:</p>
+                                    <blockquote>
+                                        <p style="font-size: 0.5em; text-align: center;">
+                                            <em>
+                                                <strong>ArchiCG</strong>, a lightweight and functional prototype
+                                                designed to apply and assess Semantiezed Interactive Compound Graphs
+                                            </em>
+                                        </p>
+                                    </blockquote>
+                                </section>
 
-  <ul>
-    <li><strong>ArchiCG</strong>, a lightweight and functional prototype</li>
-    <li>Designed to apply and test our approach</li>
-  </ul>
-</section>
+                            </section>
+                            <section>
+                                <section>
+                                    <ol style="list-style-type:none; ">
+                                        <li style="counter-reset: main 2;">ARCHItectural representations as Compound
+                                            Graphs
+                                            <p style="text-align: left;">
+                                                ArchiCG is an open initiative aiming at exploring Semantized Interactive
+                                                Compound
+                                                Graphs usage, but also the name of an open source tool constituing an
+                                                experimental platform.
+                                            </p>
+                                            <ol>
+                                                <li>Architectural Principles for openess and interoperability</li>
+                                                <li>Targeted Business Cases </li>
+                                                <li>ArchiMate Landscape</li>
+                                                <li>Knowledge landscape with OWL visualisation</li>
+                                                <li>ISO STEP landscape</li>
+                                                <li>Blockchain landscape</li>
+                                                <li>Experimentation outcomes</li>
+                                                <li>Future directions</li>
+                                            </ol>
+                                        </li>
+                                    </ol>
+                                </section>
+                                <section>
+                                    <h3 style="font-size: 0.8em; text-transform: none;color: #3366cc;">ArchiCG
+                                        Architecture Principles</h3>
+                                    <div class="content-zone">
+                                        <div class="text-zone">
+                                            <p style="font-size: 0.5em; text-align: left;">Aggregator for siloed
+                                                enterprise data distributed in heterogenesous enterprise
+                                                repositories:<br>
+                                                <span style="font-size: 0.7em; text-align: left">
+                                                Business Management System, Product Lifecycle Management Systems, Model
+                                                Based System Engineering model repositories, Configuration Management DataBase (CMDB), Application repositories...
+                                            </span>
+                                        </p>
+                                            <table style="width: 100%; font-size: 0.9em;">
+                                                <thead style="font-size: 0.4em;text-align: left;">
+                                                    <tr>
+                                                        <th style="text-align: left;">Principle</th>
+                                                        <th style="text-align: left;">Description</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody style="font-size: 0.4em;text-align: left;">
+                                                    <tr>
+                                                        <td><strong>Web-native Architecture</strong></td>
+                                                        <td>Runs entirely in the browser — no server required, enabling
+                                                            simple
+                                                            deployment and access anywhere</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td><strong>Open Technologies</strong></td>
+                                                        <td>Built on vanilla JavaScript and SVG, using open formats
+                                                            (JSON, RDF,
+                                                            SVG) to maximize compatibility</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td><strong>Modular Design</strong></td>
+                                                        <td>Activatable components and palettes allow integration of
+                                                            multiple
+                                                            modeling languages (ArchiMate, OWL,ISO STEP P21, etc.)</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td><strong>Silo Independence</strong></td>
+                                                        <td>Usable offline or across networks, without relying on
+                                                            centralized
+                                                            platforms or locked ecosystems</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td><strong>Local Data only and no referential</strong></td>
+                                                        <td>For security constraints and for preventing one more database to maintain</td>
+                                                    </tr>
 
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                        <div class="image-zone"></div>
+                                    </div>
+                                </section>
+
+                            </section>
 
                             <section>
                                 <section>
