--- a/SemanticCartography.html
+++ b/SemanticCartography.html
@@ -1601,11 +1601,11 @@
 
                                             <ul style="font-size: 0.4em;">
                                                 <li>Compound interactive matrix for representing compound interactif
-                                                    graphs with various kind of data or complex objects (cf. figure)
+                                                    graphs with various kind of data or complex objects.
                                                 </li>
                                                 <li>Cross categorization compound table, pivot tables...
                                                 </li>
-                                                <li>Interaction with timelines
+                                                <li>Interaction with compound timelines (cf.figure)
                                                 </li>
                                                 </li>
                                                 <li>and many others: cf. ArchiCG documentation and github where many
@@ -1615,7 +1615,7 @@
 
                                         </div>
                                         <div class="image-zone" style="margin-bottom: 0.2em;">
-                                            <img src="./img/ISA95 ArchiMate ConveyedObject.webp" alt="Illustration"
+                                            <img src="./img/ArchiCGCompoundTimelines.jpeg" alt="Compound timeline"
                                                 style="max-width: 100%; height: auto;" />
                                         </div>
                                     </div>
