--- a/SemanticCartography.html
+++ b/SemanticCartography.html
@@ -1275,7 +1275,7 @@
                                         </div>
 
                                         <div class="image-zone" style="margin-bottom: 0.2em;">
-                                            <img src="./img/Consolidation des Données d’Entreprise.png"
+                                            <img src="./img/consolidationheterogeneousrepositories.png"
                                                 alt="Consolidation de données d'entreprise"
                                                 style="max-width: 80%; height: auto;" />
 
