--- a/SemanticCartography.html
+++ b/SemanticCartography.html
@@ -1588,8 +1588,8 @@
                                         <div class="content-zone">
                                             <div class="text-zone">
 
-                                                <p style="font-size: 0.5em;text-align: left;">Many kind of collaboration
-                                                    could be envisage and welcome</p>
+                                                <p style="font-size: 0.6em;text-align: left;">Many kind of collaboration
+                                                    could be envisaged and welcome</p>
 
                                                 <ul style="font-size: 0.4em;">
                                                     <li>ArchiCG as research experimental platform for many topics
@@ -1601,8 +1601,9 @@
                                                     </li>
                                                     <li>Development and Improvement of modules/features
                                                     </li>
-                                                    <p>Contact <a
-                                                            href="nicolas.figay@gmail.com">nicolas.figay@gmail.com</a>
+                                                    <p>Contacts<br> <span style="font-size: 0.8em;"><a
+                                                            href="nicolas.figay@gmail.com">nicolas.figay@gmail.com</a><br>
+                                                            <a href="parisa.ghodous@univ-lyon1.fr">parisa.ghodous@univ-lyon1.fr</a></span>
                                                     </p>
                                                     <p>Github: <a href="https://github.com/nfigay/ArchiCG/">here</a></p>
                                                     <p>LinkedIn Community: <a
@@ -1613,7 +1614,7 @@
                                             </div>
                                             <div class="image-zone" style="margin-bottom: 0.2em;">
                                                 <img src="./img/collaboration style 21.png" alt="Illustration"
-                                                    style="max-width: 100%; height: auto;" />
+                                                    style="max-width: 80%; height: auto;" />
                                             </div>
                                         </div>
                                         <blockquote>
